<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_15">+</string>
    <string name="button_13221">4</string>
    <string name="button_94856">5</string>
    <string name="button_Add">+</string>
    <string name="button_04">4</string>
    <string name="button_06">6</string>
    <string name="button_05">5</string>
    <string name="button_Minus">-</string>
    <string name="Button_07">7</string>
    <string name="Button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_Divide">/</string>
    <string name="BUtton_Clear">Clear</string>
    <string name="Button_00">"0 "</string>
    <string name="Button_dot">.</string>
    <string name="button_Multiply">*</string>
    <string name="button_Equal">=</string>
</resources>