<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainlayout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button_03" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"

                android:onClick="btnAddClick"
                android:text="@string/button_Add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"

                android:onClick="btnMinusClick"
                android:text="@string/button_Minus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/Button_07" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/Button_08" />


            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_09" />


            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/button_Divide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/BUtton_Clear" />


            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/Button_00" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/Button_dot" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_Multiply" />


        </LinearLayout>

        <Button
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="btnResultClick"
            android:text="@string/button_Equal" />



    </LinearLayout>








</RelativeLayout>



